--- a/rooms.html
+++ b/rooms.html
@@ -49,6 +49,10 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Noto+Sans+TC:wght@300;400;500;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Noto+Sans+TC:wght@300;400;500;700&display=swap"></noscript>
     
+    <!-- 預載入首個房型的關鍵圖片 -->
+    <link rel="preload" as="image" href="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" type="image/webp">
+    <link rel="preload" as="image" href="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room2.webp" type="image/webp" media="(min-width: 768px)">
+    
     <!-- Font Awesome - 延遲載入 -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
@@ -538,61 +542,61 @@
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
                                 <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" alt="豪華家庭房-圖片-1" loading="lazy">
+                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" alt="豪華家庭房-圖片-1" loading="eager">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room2.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room2.webp" alt="豪華家庭房-圖片-2" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room2.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room2.webp" alt="豪華家庭房-圖片-2" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room3.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room3.webp" alt="豪華家庭房-圖片-3" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room3.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room3.webp" alt="豪華家庭房-圖片-3" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room4.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room4.webp" alt="豪華家庭房-圖片-4" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room4.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room4.webp" alt="豪華家庭房-圖片-4" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room5.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room5.webp" alt="豪華家庭房-圖片-5" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room5.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room5.webp" alt="豪華家庭房-圖片-5" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="500">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room6.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room6.webp" alt="豪華家庭房-圖片-6" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room6.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room6.webp" alt="豪華家庭房-圖片-6" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="600">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room7.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room7.webp" alt="豪華家庭房-圖片-7" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room7.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room7.webp" alt="豪華家庭房-圖片-7" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="700">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room8.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room8.webp" alt="豪華家庭房-圖片-8" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room8.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room8.webp" alt="豪華家庭房-圖片-8" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="800">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room9.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room9.webp" alt="豪華家庭房-圖片-9" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room9.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room9.webp" alt="豪華家庭房-圖片-9" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="900">
                             <picture>
-                                <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room10.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room10.webp" alt="豪華家庭房-圖片-10" loading="lazy">
+                                <source data-srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room10.webp" type="image/webp">
+                                <img data-src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room10.webp" alt="豪華家庭房-圖片-10" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                     </div>
@@ -636,50 +640,50 @@
                     <div class="room-gallery">
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room1.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room1.webp" alt="高級四人房-圖片-1" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room1.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room1.webp" alt="高級四人房-圖片-1" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room2.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room2.webp" alt="高級四人房-圖片-2" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room2.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room2.webp" alt="高級四人房-圖片-2" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room3.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room3.webp" alt="高級四人房-圖片-3" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room3.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room3.webp" alt="高級四人房-圖片-3" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room4.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room4.webp" alt="高級四人房-圖片-4" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room4.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room4.webp" alt="高級四人房-圖片-4" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room5.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room5.webp" alt="高級四人房-圖片-5" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room5.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room5.webp" alt="高級四人房-圖片-5" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="500">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room6.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room6.webp" alt="高級四人房-圖片-6" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room6.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room6.webp" alt="高級四人房-圖片-6" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="600">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room7.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room7.webp" alt="高級四人房-圖片-7" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room7.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room7.webp" alt="高級四人房-圖片-7" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="700">
                             <picture>
-                                <source srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room8.webp" type="image/webp">
-                                <img src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room8.webp" alt="高級四人房-圖片-8" loading="lazy">
+                                <source data-srcset="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room8.webp" type="image/webp">
+                                <img data-src="images/rooms/premiumQuad/penghu-kiwi-villa-premium-quad-room8.webp" alt="高級四人房-圖片-8" loading="lazy" class="lazyload">
                             </picture>
                         </div>
                     </div>
@@ -1327,6 +1331,9 @@
     !function(e){"use strict";var t=function(t,n,r){function o(e){return i.body?e():void setTimeout(function(){o(e)})}function a(){d.addEventListener&&d.removeEventListener("load",a),d.media=r||"all"}var l,i=e.document,d=i.createElement("link");if(n)l=n;else{var s=(i.body||i.getElementsByTagName("head")[0]).childNodes;l=s[s.length-1]}var u=i.styleSheets;d.rel="stylesheet",d.href=t,d.media="only x",o(function(){l.parentNode.insertBefore(d,n?l:l.nextSibling)});var f=function(e){for(var t=d.href,n=u.length;n--;)if(u[n].href===t)return e();setTimeout(function(){f(e)})};return d.addEventListener&&d.addEventListener("load",a),d.onloadcssdefined=f,f(a),d};"undefined"!=typeof exports?exports.loadCSS=t:e.loadCSS=t}("undefined"!=typeof global?global:this);
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="js/lazy-load.js" defer></script>
+    <script src="js/room-gallery-optimized.js" defer></script>
+    <script src="js/lightbox-optimized.js" defer></script>
+    <script src="js/main-optimized.js" defer></script>
 </body>
 </html> 
