--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
     <!-- AOS preconnect 優化 -->
     <link rel="preconnect" href="https://unpkg.com">
     
+    <!-- DNS 預取優化 - 預先解析第三方域名 -->
+    <link rel="dns-prefetch" href="https://booking.owlting.com">
+    <link rel="dns-prefetch" href="https://maps.app.goo.gl">
+    <link rel="dns-prefetch" href="https://page.line.me">
+    <link rel="dns-prefetch" href="https://www.facebook.com">
+    <link rel="dns-prefetch" href="https://www.instagram.com">
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+    
     <!-- 精簡關鍵Hero CSS - 恢復重要變數和效果 -->
     <style>
     /* 關鍵 CSS - 首屏渲染必需樣式（< 200行） */
