--- a/rooms.html
+++ b/rooms.html
@@ -62,8 +62,8 @@
     <noscript><link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"></noscript>
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/core.css">
-    <link rel="stylesheet" href="css/rooms.css">
+    <link rel="stylesheet" href="css/core.min.css">
+    <link rel="stylesheet" href="css/rooms.min.css">
     
     <!-- Structured Data for Rooms -->
     <script type="application/ld+json">
@@ -1331,9 +1331,9 @@
     !function(e){"use strict";var t=function(t,n,r){function o(e){return i.body?e():void setTimeout(function(){o(e)})}function a(){d.addEventListener&&d.removeEventListener("load",a),d.media=r||"all"}var l,i=e.document,d=i.createElement("link");if(n)l=n;else{var s=(i.body||i.getElementsByTagName("head")[0]).childNodes;l=s[s.length-1]}var u=i.styleSheets;d.rel="stylesheet",d.href=t,d.media="only x",o(function(){l.parentNode.insertBefore(d,n?l:l.nextSibling)});var f=function(e){for(var t=d.href,n=u.length;n--;)if(u[n].href===t)return e();setTimeout(function(){f(e)})};return d.addEventListener&&d.addEventListener("load",a),d.onloadcssdefined=f,f(a),d};"undefined"!=typeof exports?exports.loadCSS=t:e.loadCSS=t}("undefined"!=typeof global?global:this);
     </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-    <script src="js/lazy-load.js" defer></script>
-    <script src="js/room-gallery-optimized.js" defer></script>
-    <script src="js/lightbox-optimized.js" defer></script>
-    <script src="js/main-optimized.js" defer></script>
+    <script src="js/lazy-load.min.js" defer></script>
+    <script src="js/room-gallery-optimized.min.js" defer></script>
+    <script src="js/lightbox-optimized.min.js" defer></script>
+    <script src="js/main-optimized.min.js" defer></script>
 </body>
 </html> 
