--- a/index.html
+++ b/index.html
@@ -493,10 +493,9 @@
             <div class="nav-logo">
                 <a href="/" class="logo">
                     <picture>
-                        <source srcset="images/logo/kiwi-villa-logo-small.avif" type="image/avif" media="(max-width: 768px)">
-                        <source srcset="images/logo/kiwi-villa-logo-small.webp" type="image/webp" media="(max-width: 768px)">
-                        <source srcset="images/logo/kiwi-villa-logo-medium.webp" type="image/webp">
-                        <img src="images/logo/kiwi-villa-logo-small.webp" alt="澎湖期遇度假會館 Logo" class="logo-img" width="45" height="24" loading="eager">
+                        <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
+                        <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
+                        <img src="images/logo/kiwi-villa-logo.webp" alt="澎湖期遇度假會館 Logo" class="logo-img" loading="eager">
                     </picture>
                 </a>
             </div>
