--- a/faq.html
+++ b/faq.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/faq">
     <meta property="og:title" content="常見問題 - 澎湖期遇度假會館 | FAQ 訂房住宿問答">
     <meta property="og:description" content="澎湖期遇度假會館常見問題解答，包含房價說明、設施服務、訂房須知等詳細資訊">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/faq/faq-og.webp">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/faq">
     <meta property="twitter:title" content="常見問題 - 澎湖期遇度假會館 | FAQ 訂房住宿問答">
     <meta property="twitter:description" content="澎湖期遇度假會館常見問題解答，包含房價說明、設施服務、訂房須知等詳細資訊">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/faq/faq-og.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
