--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/">
     <meta property="og:title" content="澎湖期遇度假會館 - 三面環海歐風建築度假首選">
     <meta property="og:description" content="座落於三面環海半島，融合歐洲巴洛克古典建築美學。在陽光海洋微風星光中，開啟您的期遇之旅。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/assets/og-image.webp">
-    
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/">
     <meta property="twitter:title" content="澎湖期遇度假會館 - 三面環海歐風建築度假首選">
     <meta property="twitter:description" content="座落於三面環海半島，融合歐洲巴洛克古典建築美學。在陽光海洋微風星光中，開啟您的期遇之旅。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/assets/og-image.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
