--- a/intro.html
+++ b/intro.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/intro">
     <meta property="og:title" content="細說期遇 - 澎湖期遇度假會館 | 歐式典雅設計與頂級設備">
     <meta property="og:description" content="揭示期遇度假會館背後的設計理念與品質堅持，從歐式典雅裝潢到頂級設備規格，每個細節都體現對品質的極致追求。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/intro/intro-og.webp">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/intro">
     <meta property="twitter:title" content="細說期遇 - 澎湖期遇度假會館 | 歐式典雅設計與頂級設備">
     <meta property="twitter:description" content="揭示期遇度假會館背後的設計理念與品質堅持，從歐式典雅裝潢到頂級設備規格，每個細節都體現對品質的極致追求。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/intro/intro-og.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
