--- a/location.html
+++ b/location.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/location">
     <meta property="og:title" content="地理資訊 - 澎湖期遇度假會館 | 絕佳位置，交通便捷">
     <meta property="og:description" content="澎湖期遇度假會館絕佳地理位置，距離機場12分鐘、碼頭9分鐘車程，靠近市區商圈與澎科大，外送覆蓋範圍內，交通便捷生活機能佳。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/location/location-og.webp">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/location">
     <meta property="twitter:title" content="地理資訊 - 澎湖期遇度假會館 | 絕佳位置，交通便捷">
     <meta property="twitter:description" content="澎湖期遇度假會館絕佳地理位置，距離機場12分鐘、碼頭9分鐘車程，靠近市區商圈與澎科大，外送覆蓋範圍內，交通便捷生活機能佳。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/location/location-og.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
