--- a/policy.html
+++ b/policy.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/policy">
     <meta property="og:title" content="訂房須知 - 澎湖期遇度假會館 | 詳細住宿規定與注意事項">
     <meta property="og:description" content="詳細住宿規定與注意事項，包含入住退房時間、取消政策、住宿規定、設施服務等完整資訊。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/policy/policy-og.webp">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/policy">
     <meta property="twitter:title" content="訂房須知 - 澎湖期遇度假會館 | 詳細住宿規定與注意事項">
     <meta property="twitter:description" content="詳細住宿規定與注意事項，包含入住退房時間、取消政策、住宿規定、設施服務等完整資訊。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/policy/policy-og.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
