--- a/reviews.html
+++ b/reviews.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/reviews">
     <meta property="og:title" content="客戶評價 - 澎湖期遇度假會館 | 五星好評推薦">
     <meta property="og:description" content="澎湖期遇度假會館客戶評價，來自真實住客的體驗分享與五星好評。優質服務品質、舒適住宿環境、貼心服務態度，獲得旅客一致推薦。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/reviews/reviews-og.webp">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/reviews">
     <meta property="twitter:title" content="客戶評價 - 澎湖期遇度假會館 | 五星好評推薦">
     <meta property="twitter:description" content="澎湖期遇度假會館客戶評價，來自真實住客的體驗分享與五星好評。優質服務品質、舒適住宿環境、貼心服務態度，獲得旅客一致推薦。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/reviews/reviews-og.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
