--- a/rooms.html
+++ b/rooms.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://www.kiwi-villa.com/rooms">
     <meta property="og:title" content="房型設施 - 澎湖期遇度假會館 | 奢華床組精品定制家具">
     <meta property="og:description" content="澎湖期遇度假會館房型設施，提供多種房型選擇，滿足不同旅客需求。國際品質護背床墊、定制家具、隔音鋁門窗、電動窗簾，品質住宿體驗。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/rooms/rooms-og.webp">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/rooms">
     <meta property="twitter:title" content="房型設施 - 澎湖期遇度假會館 | 奢華床組精品定制家具">
     <meta property="twitter:description" content="澎湖期遇度假會館房型設施，提供多種房型選擇，滿足不同旅客需求。國際品質護背床墊、定制家具、隔音鋁門窗、電動窗簾，品質住宿體驗。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/rooms/rooms-og.webp">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
