--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>澎湖期遇度假會館 - 澎湖民宿推薦 | 三面環海歐風建築度假首選</title>
-    <meta name="description" content="澎湖期遇度假會館，座落於三面環海半島，融合歐洲巴洛克古典建築美學。在陽光海洋微風星光中，開啟您的期遇之旅，體驗潮流與經典融合的海島度假時光。">
-    <meta name="keywords" content="澎湖民宿推薦,澎湖期遇度假會館,澎湖住宿,三面環海,歐洲巴洛克建築,澎湖旅遊,海島度假,澎湖民宿">
-    
+    <title>澎湖期遇度假會館 - 三面環海海景民宿 | 馬公市豪華住宿推薦 | 近機場碼頭</title>
+    <meta name="description" content="澎湖期遇度假會館｜三面環海海景民宿，距機場12分鐘、碼頭9分鐘。提供豪華家庭房$4800起（60㎡含TOTO浴缸+獨立陽台）、四人房、雙人房$2500起。國際品牌床墊、定制家具、免費WiFi停車。5星好評，立即預訂！">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.kiwi-villa.com/">
     <meta property="og:title" content="澎湖期遇度假會館 - 三面環海歐風建築度假首選">
     <meta property="og:description" content="座落於三面環海半島，融合歐洲巴洛克古典建築美學。在陽光海洋微風星光中，開啟您的期遇之旅。">
-    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
+    <meta property="og:image" content="https://www.kiwi-villa.com/images/logo/apple-touch-icon-152x152.png">
+    <meta property="og:image:width" content="152">
+    <meta property="og:image:height" content="152">
+    <meta property="og:image:alt" content="澎湖期遇度假會館 - 三面環海歐風建築">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.kiwi-villa.com/">
     <meta property="twitter:title" content="澎湖期遇度假會館 - 三面環海歐風建築度假首選">
     <meta property="twitter:description" content="座落於三面環海半島，融合歐洲巴洛克古典建築美學。在陽光海洋微風星光中，開啟您的期遇之旅。">
-    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/favicon-32x32.png">
+    <meta property="twitter:image" content="https://www.kiwi-villa.com/images/logo/apple-touch-icon-152x152.png">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/logo/favicon-32x32.png">
@@ -389,7 +391,8 @@
             "latitude": "23.5693",
             "longitude": "119.5794"
         },
-        "priceRange": "$2,501 - $8,000",
+        "hasMap": "https://www.google.com/maps/place/?q=place_id:ChIJp82ruCFbbDQRm-ZmRMmpVyE",
+        "priceRange": "$2,500 - $6,600",
         "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "5.0",
