--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>澎湖期遇度假會館 - 三面環海海景民宿 | 馬公市豪華住宿推薦 | 近機場碼頭</title>
-    <meta name="description" content="澎湖期遇度假會館｜三面環海海景民宿，距機場12分鐘、碼頭9分鐘。提供豪華家庭房$4800起（60㎡含TOTO浴缸+獨立陽台）、四人房、雙人房$2500起。國際品牌床墊、定制家具、免費WiFi停車。5星好評，立即預訂！">
+    <title>澎湖期遇度假會館 - 三面環海豪華民宿 | 馬公市精品住宿推薦 | 近機場碼頭</title>
+    <meta name="description" content="澎湖期遇度假會館｜三面環海半島豪華民宿，距機場12分鐘、碼頭9分鐘。提供豪華家庭房$4800起（60㎡含TOTO浴缸+獨立陽台）、四人房、雙人房$2500起。國際品牌床墊、定制家具、免費WiFi停車。5星好評，立即預訂！">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
