--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
         "alternateName": "期遇度假會館",
         "description": "澎湖期遇度假會館，座落於三面環海半島，融合歐洲巴洛克古典建築美學，提供獨特的海島度假體驗。",
         "url": "https://www.kiwi-villa.com/",
+        "logo": "https://www.kiwi-villa.com/images/logo/favicon-512x512.png",
         "telephone": "+886-933-636373",
         "contactPoint": {
             "@type": "ContactPoint",
